src.1/objects/Lead.object
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <fields>
        <fullName>ADR_List__c</fullName>
        <description>Assigns the lead to a specific dialer list
1-Medical
2-Dental
3-Vision
4-DemandForce
7-Physical Rehab
10-19 Partner lists
20-Demandforce
21-Lighthouse
22-CareStream
48-Eyefinity
49-HealthGrades Upsell
50-Leads without a vertical
90-Non-medical/Unknown</description>
        <label>ADR List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdvocateHub__Referral_ID__c</fullName>
        <label>Referral ID (appexchange)</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdvocateHub__Referral_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influitive Referral Source</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate_ID__c</fullName>
        <externalId>true</externalId>
        <label>Affiliate ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Affiliate who provided the original lead</description>
        <inlineHelpText>The affiliate who provided the original lead</inlineHelpText>
        <label>Affiliate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Affiliate</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Referred_By_Co__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Test Custom Object</label>
        <referenceTo>Ambassador__Test__c</referenceTo>
        <relationshipLabel>Test Custom Objects</relationshipLabel>
        <relationshipName>Ambassador_Custom_Object_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Referred_By_Ambassador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Ambassador</label>
        <referenceTo>Ambassador__Ambassador__c</referenceTo>
        <relationshipLabel>Referred Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Referred_By_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Short_Code__c</fullName>
        <label>Referring Short Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <description>Adds the email to a hidden field to use when converting a lead</description>
        <formula>Email</formula>
        <label>Billing Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Owner_Email__c</fullName>
        <label>Business Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Owner_First_Name__c</fullName>
        <label>Business Owner First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Owner_Last_Name__c</fullName>
        <label>Business Owner Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Owner_Title__c</fullName>
        <label>Business Owner Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <formula>Business_Owner_First_Name__c &amp; &quot; &quot; &amp;Business_Owner_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ARDI__c</fullName>
        <label>Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AR__c</fullName>
        <label>Address Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ATZ__c</fullName>
        <label>Address Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AV__c</fullName>
        <label>Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__LES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lead Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4 Patient Care</fullName>
                </value>
                <value>
                    <fullName>DemandForce</fullName>
                </value>
                <value>
                    <fullName>eCentral</fullName>
                </value>
                <value>
                    <fullName>eReminders</fullName>
                </value>
                <value>
                    <fullName>Lighthouse</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Patient Activator</fullName>
                </value>
                <value>
                    <fullName>Phone Tree</fullName>
                </value>
                <value>
                    <fullName>PM/EMR</fullName>
                </value>
                <value>
                    <fullName>Practice Mojo</fullName>
                </value>
                <value>
                    <fullName>Revenue Wel</fullName>
                </value>
                <value>
                    <fullName>Sesame</fullName>
                </value>
                <value>
                    <fullName>Teledental</fullName>
                </value>
                <value>
                    <fullName>Televox</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Weave</fullName>
                </value>
                <value>
                    <fullName>Websystem3</fullName>
                </value>
                <value>
                    <fullName>Yapi</fullName>
                </value>
                <value>
                    <fullName>ZocDoc</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Ready__c</fullName>
        <formula>IF(Ready_to_convert__c = TRUE, IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Green&quot;), IMAGE(&quot;/img/msg_icons/warning24.png&quot;, &quot;Yellow&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready to convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_RR_Time__c</fullName>
        <description>This field is 1 hour behind the actual RR time.  Used for time-based trigger.</description>
        <label>Current RR Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>home_phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IQCloud__Score__c</fullName>
        <description>Lead Score Pilot</description>
        <label>Lead Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box is checked by LastROETask trigger when Group Practice task is added</description>
        <label>isGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRoundRobin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked by Pardot automatically or should be checked if manually assigning leads to the Round Robin queues.</description>
        <inlineHelpText>This field is checked by Pardot automatically or should be checked if manually assigning leads to the Round Robin queues.</inlineHelpText>
        <label>IsRoundRobin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Owner_Change__c</fullName>
        <label>Last Owner Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_ROE_Task_Date__c</fullName>
        <label>Last ROE Task Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadAssignment__Processed_by_Round_Robin_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed by Round Robin App?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <formula>Owner:User.LastName &amp;&quot;, &quot; &amp;  Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Reported_PM__c</fullName>
        <inlineHelpText>The Practice Software as reported by the lead.</inlineHelpText>
        <label>Lead Reported PM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lead_source_description__c</fullName>
        <label>Lead Source Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                    <color>#0B6FCE</color>
                    <label>Enterprise</label>
                </value>
                <value>
                    <fullName>Practice</fullName>
                    <color>#78C953</color>
                    <default>true</default>
                    <label>Practice</label>
                </value>
                <value>
                    <fullName>Group Practice</fullName>
                    <color>#E27001</color>
                    <label>Group Practice</label>
                </value>
                <value>
                    <fullName>Partner</fullName>
                    <color>#A845DC</color>
                    <label>Partner</label>
                </value>
                <value>
                    <fullName>Referral Partner</fullName>
                    <color>#F3D904</color>
                    <label>Referral Partner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a Major Account?</description>
        <label>Major Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Micro_Vertical__c</fullName>
        <label>Micro Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_industry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>Audiology</fullName>
                </value>
                <value>
                    <fullName>Breast</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Cosmetic Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diabeties Specialist</fullName>
                </value>
                <value>
                    <fullName>Emergency Medicine</fullName>
                </value>
                <value>
                    <fullName>Gynecologic</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Holistic, Integrative, or Naturopathic Medicine</fullName>
                </value>
                <value>
                    <fullName>Hospice &amp; Palliative Medicine</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Medical Dermatology</fullName>
                </value>
                <value>
                    <fullName>Multi-specialty Group</fullName>
                </value>
                <value>
                    <fullName>Nephrology</fullName>
                </value>
                <value>
                    <fullName>Pathology</fullName>
                </value>
                <value>
                    <fullName>Pediatric</fullName>
                </value>
                <value>
                    <fullName>Pulmonary Medicine</fullName>
                </value>
                <value>
                    <fullName>Radiation</fullName>
                </value>
                <value>
                    <fullName>Reproductive Medicine or Fertility Specialist</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Skin</fullName>
                </value>
                <value>
                    <fullName>Sleep Disorders</fullName>
                </value>
                <value>
                    <fullName>Thoracic</fullName>
                </value>
                <value>
                    <fullName>Vascular Surgery (veins)</fullName>
                </value>
                <value>
                    <fullName>Other, Please Specify --&gt;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Email_From__c</fullName>
        <description>This field will be updated by a workflow rule when the email field is changed to a new value.  The value will be the role of the user that updated the email field.  To be used for Pardot segmenting.</description>
        <label>New Email From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nfchat__Chat_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chat Log</label>
        <referenceTo>nfchat__Chat_Log__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Not_Listed_Speciality__c</fullName>
        <label>Not Listed Speciality</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_CI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Active CI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-9</fullName>
                </value>
                <value>
                    <fullName>10-49</fullName>
                </value>
                <value>
                    <fullName>50-100</fullName>
                </value>
                <value>
                    <fullName>100+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Providers__c</fullName>
        <label>Number of Providers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-10</fullName>
                </value>
                <value>
                    <fullName>11-29</fullName>
                </value>
                <value>
                    <fullName>30-49</fullName>
                </value>
                <value>
                    <fullName>50+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>old_sugar_ID__c</fullName>
        <label>Old Sugar ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Practice_Software__c</fullName>
        <label>Other Practice Software</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>outside_sales_rep__c</fullName>
        <label>Outside Sales Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Adam</fullName>
                </value>
                <value>
                    <fullName>Al</fullName>
                </value>
                <value>
                    <fullName>Brandon</fullName>
                </value>
                <value>
                    <fullName>Daisy</fullName>
                </value>
                <value>
                    <fullName>Danny</fullName>
                </value>
                <value>
                    <fullName>Dave</fullName>
                </value>
                <value>
                    <fullName>Eric</fullName>
                </value>
                <value>
                    <fullName>Janette</fullName>
                </value>
                <value>
                    <fullName>JoshQ</fullName>
                </value>
                <value>
                    <fullName>Korbin</fullName>
                </value>
                <value>
                    <fullName>Mary</fullName>
                </value>
                <value>
                    <fullName>Nick</fullName>
                </value>
                <value>
                    <fullName>Not Claimed</fullName>
                </value>
                <value>
                    <fullName>Otis</fullName>
                </value>
                <value>
                    <fullName>Robbie</fullName>
                </value>
                <value>
                    <fullName>Tennli</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pardot_Affiliate_ID__c</fullName>
        <description>This field is populated from Pardot and represents the Solutionreach Affiliate ID</description>
        <inlineHelpText>This field is populated from Pardot and represents the Solutionreach Affiliate ID</inlineHelpText>
        <label>Pardot Affiliate ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Lists__c</fullName>
        <label>Pardot Lists</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pardot_Marketing_Campaign__c</fullName>
        <description>This field is synced from Pardot and is the Marketing Campaign</description>
        <inlineHelpText>This field is synced from Pardot and is the Marketing Campaign</inlineHelpText>
        <label>Pardot Marketing Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pardot Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pardot_Partner_ID__c</fullName>
        <description>This field is populated from Pardot and is the Solutionreach assigned Partner ID</description>
        <inlineHelpText>This field is populated from Pardot and is the Solutionreach assigned Partner ID</inlineHelpText>
        <label>Pardot Partner ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Practice_Software__c</fullName>
        <description>This fields is populated from Pardot and corresponds to the Practice Software field in the web-to-lead form in Pardot</description>
        <inlineHelpText>This fields is populated from Pardot and corresponds to the Practice Software field in the web-to-lead form in Pardot</inlineHelpText>
        <label>Pardot Practice Software</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Social_Data__c</fullName>
        <label>Pardot Social Data</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Partner)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_for_No_Current_Integration__c</fullName>
        <inlineHelpText>Enter the name of the integration if it is not a current integration.</inlineHelpText>
        <label>PM for No Current Integration</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Sync_Availability_Text__c</fullName>
        <formula>text(Practice_Software__r.SYNC_Availability__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Sync Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Writeback__c</fullName>
        <formula>Practice_Software__r.Write_back_Confirmations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Writeback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Management_Software_Version__c</fullName>
        <formula>Practice_Software__r.Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Management Software Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Management_Sync_Availability__c</fullName>
        <formula>Practice_Software__r.SYNC_Availability_Icon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Management Sync Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Software__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice Software</label>
        <referenceTo>Management_System__c</referenceTo>
        <relationshipLabel>Leads (Management System)</relationshipLabel>
        <relationshipName>Leads_Practice_Software</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Lead for Lead Contacts</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>promotion__c</fullName>
        <label>Promotion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pw_cc__AddressStatus__c</fullName>
        <label>Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__CountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Contactability Score was last updated</description>
        <label>NeuralView: Contactability Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The InsideSales.com NeuralView Hourly Contactability Score Object Lookup</description>
        <label>NeuralView: Hourly Contactability ID</label>
        <referenceTo>qbdialer__ContactScore__c</referenceTo>
        <relationshipLabel>Contact Score Items</relationshipLabel>
        <relationshipName>Contact_Score_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Contactability Score</description>
        <label>NeuralView: Contactability Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  It should be incremented each time the Lead is dialed.</description>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Lead.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Mirror__c</fullName>
        <formula>text( Rating )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Mirror</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_convert__c</fullName>
        <formula>IF(
Company = &#39;&#39; ||
FirstName = &#39;&#39; ||
LastName = &#39;&#39; ||
Email = &#39;&#39; ||
Phone = &#39;&#39; ||
State  = &#39;&#39; ||
Country = &#39;&#39; ||
ISBLANK(TEXT(Industry)) ||
ISBLANK(TEXT(Sub_industry__c)) ||
ISBLANK(TEXT(LeadSource)) ||
Practice_Software__c = &#39;&#39; ||
ISPICKVAL(Practice_Software__r.SYNC_Availability__c, &#39;Blacklist - DO NOT SELL&#39;) ||
((ISPICKVAL( Sub_industry__c , &quot;Dermatology&quot; ) || 
ISPICKVAL( Sub_industry__c, &quot;Heart and Vascular&quot; ) || 
ISPICKVAL( Sub_industry__c, &quot;Oncology&quot; ) || 
ISPICKVAL( Sub_industry__c, &quot;Other&quot; )) &amp;&amp; 
ISBLANK( TEXT( Micro_Vertical__c )))
,False,True
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready to convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recent_Import_Date_Time__c</fullName>
        <description>Used to filter duplicates on imports to add campaign</description>
        <label>Recent Import Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <description>Referral ID for tracking Influitive referrals.</description>
        <externalId>true</externalId>
        <label>Referral ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Partner_Signup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by Pardot</description>
        <label>Referral Partner Signup</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>